# psicologia_app

./: pyproject.toml
docs/: anamnesis.md  budget.md
src/: main.py
src/data/: appointment.py  database.py  db_utils.py  documents.py  mock.py  models.py  monthly_invoice.py  patient.py  psychologist_settings.py
src/data/models/: appointment_models.py  document_models.py  invoice_models.py  patient_models.py  psychologist_settings_models.py
src/data/tests/: conftest.py  test_appointment.py  test_database.py  test_monthly_invoice.py  test_patient.py
src/modules/: navbar.py
src/pages/: 1_schedule_page.py  2_patients_page.py  3_monthly_invoices.py  documents_view.py  homepage.py  monthly_invoices.py  patients_list.py  patients_page.py  schedule_page.py  settings_page.py
src/service/: database_manager.py  documents_manager.py  llm.py  monthly_invoice_manager.py  patient_manager.py  rag.py  retrieval.py  schedule.py  settings_service.py
src/utils/: helpers.py  monthly_invoice_computations.py
