[project]
name = "psicologia-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.0",
    "duckdb>=1.3.0",
    "hypothesis>=6.135.7",
    "mypy>=1.16.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.4.2",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "streamlit>=1.45.1",
    "streamlit-calendar>=1.3.1",
]
