[project]
name = "psicologia-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.0",
    "chromadb>=1.0.15",
    "duckdb>=1.3.0",
    "haystack-ai>=2.15.2",
    "hypothesis>=6.135.7",
    "llama-index>=0.12.51",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-vector-stores-chroma>=0.4.2",
    "logfire>=4.0.0",
    "markdown>=3.8.2",
    "mypy>=1.16.0",
    "openai>=1.95.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.4.2",
    "pypdf>=5.8.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.45.1",
    "streamlit-calendar>=1.3.1",
    "torch>=2.7.1",
]
